Nearly finished final score, just need to change activity when health is less than 0.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,30 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/exit" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Score:"
+        android:id="@+id/score"
+        android:textColor="#FFFFFF"
+        android:layout_marginBottom="59dp"
+        android:textSize="40dp"
+        android:layout_above="@+id/btnStart"
+        android:layout_alignLeft="@+id/btnStart"
+        android:layout_alignStart="@+id/btnStart" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/finalScore"
+        android:layout_alignTop="@+id/score"
+        android:layout_toRightOf="@+id/score"
+        android:layout_alignBottom="@+id/score"
+        android:textColor="#FFFFFF"
+        android:textSize="40dp"
+        android:layout_alignRight="@+id/btnStart"
+        android:layout_alignEnd="@+id/btnStart" />
+
 </RelativeLayout>
